--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Usando JavaScript por primera vez</title>
+	<title>Juego de Memoria</title>
 
 	<!--Para usar JS lo primero que debes hacer es abrir las etiqueta 'script'-->
 	<!--<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>-->
